--- a/config/sys.config.templ
+++ b/config/sys.config.templ
@@ -6,7 +6,7 @@
                  {netdev, "grx"},
 				 freebind,
 				 %% {netns, "/var/run/netns/grx"},
-				 {routes, [{{${GTP_U_IP4_ROUTES_ERLANG}]}
+				 {routes, [{$GTP_U_GRX_IP4_ROUTES_ERLANG}]}
 				]}
 			 ]}
 	      ]},
