--- a/config/sys.config.templ
+++ b/config/sys.config.templ
@@ -2,7 +2,7 @@
  {'ergw-gtp-u-node', []},
 
  {gtp_u_kmod, [
-	       {sockets, [{grx, [{ip, {${GTP_U_GRX_IP4_ERLANG}},
+	       {sockets, [{grx, [{ip, {${GTP_U_GRX_IP4_ERLANG}}},
                  {netdev, "grx"},
 				 freebind,
 				 %% {netns, "/var/run/netns/grx"},
